assembler/SpadeAssemblyParser.cpp

// Generated from H:/Programming (Ankit)/Projects/spade/1.0/velocity/assembler\SpadeAssembly.g4 by ANTLR 4.11.1


#include "SpadeAssemblyListener.h"
#include "SpadeAssemblyVisitor.h"

#include "SpadeAssemblyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SpadeAssemblyParserStaticData final {
  SpadeAssemblyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SpadeAssemblyParserStaticData(const SpadeAssemblyParserStaticData&) = delete;
  SpadeAssemblyParserStaticData(SpadeAssemblyParserStaticData&&) = delete;
  SpadeAssemblyParserStaticData& operator=(const SpadeAssemblyParserStaticData&) = delete;
  SpadeAssemblyParserStaticData& operator=(SpadeAssemblyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag spadeassemblyParserOnceFlag;
SpadeAssemblyParserStaticData *spadeassemblyParserStaticData = nullptr;

void spadeassemblyParserInitialize() {
  assert(spadeassemblyParserStaticData == nullptr);
  auto staticData = std::make_unique<SpadeAssemblyParserStaticData>(
    std::vector<std::string>{
      "assembly", "metadata", "globals", "global", "method", "args", "arg", 
      "locs", "local", "code", "line", "exceptionTable", "exceptionItem", 
      "class", "accessor", "fields", "field", "value", "array", "float"
    },
    std::vector<std::string>{
      "", "'magic'", "':'", "'minorVersion'", "'majorVersion'", "'type'", 
      "'XP'", "'SLL'", "'imports'", "'globals'", "';'", "'VAR'", "'CONST'", 
      "'entry'", "'method'", "'maxstack'", "'args'", "'VALUE'", "'REF'", 
      "'locals'", "'['", "'closureStart'", "']'", "'code'", "'exceptionTable'", 
      "'-'", "'->'", "'class'", "'CLASS'", "'INTERFACE'", "'ENUM'", "'ANNOTATION'", 
      "'accessors'", "'PRIVATE'", "'INTERNAL'", "'PACKAGE_PRIVATE'", "'PROTECTED'", 
      "'PUBLIC'", "'ABSTRACT'", "'FINAL'", "'STATIC'", "'INLINE'", "'fields'", 
      "','", "'.'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "NUMBER", "STRING", "CSTRING", 
      "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  spadeassemblyParserStaticData = staticData.release();
}

}

SpadeAssemblyParser::SpadeAssemblyParser(TokenStream *input) : SpadeAssemblyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SpadeAssemblyParser::SpadeAssemblyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SpadeAssemblyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *spadeassemblyParserStaticData->atn, spadeassemblyParserStaticData->decisionToDFA, spadeassemblyParserStaticData->sharedContextCache, options);
}

SpadeAssemblyParser::~SpadeAssemblyParser() {
  delete _interpreter;
}

const atn::ATN& SpadeAssemblyParser::getATN() const {
  return *spadeassemblyParserStaticData->atn;
}

std::string SpadeAssemblyParser::getGrammarFileName() const {
  return "SpadeAssembly.g4";
}

const std::vector<std::string>& SpadeAssemblyParser::getRuleNames() const {
  return spadeassemblyParserStaticData->ruleNames;
}

const dfa::Vocabulary& SpadeAssemblyParser::getVocabulary() const {
  return spadeassemblyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SpadeAssemblyParser::getSerializedATN() const {
  return spadeassemblyParserStaticData->serializedATN;
}


//----------------- AssemblyContext ------------------------------------------------------------------

SpadeAssemblyParser::AssemblyContext::AssemblyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpadeAssemblyParser::MetadataContext* SpadeAssemblyParser::AssemblyContext::metadata() {
  return getRuleContext<SpadeAssemblyParser::MetadataContext>(0);
}

SpadeAssemblyParser::GlobalsContext* SpadeAssemblyParser::AssemblyContext::globals() {
  return getRuleContext<SpadeAssemblyParser::GlobalsContext>(0);
}

std::vector<SpadeAssemblyParser::MethodContext *> SpadeAssemblyParser::AssemblyContext::method() {
  return getRuleContexts<SpadeAssemblyParser::MethodContext>();
}

SpadeAssemblyParser::MethodContext* SpadeAssemblyParser::AssemblyContext::method(size_t i) {
  return getRuleContext<SpadeAssemblyParser::MethodContext>(i);
}

std::vector<SpadeAssemblyParser::ClassContext *> SpadeAssemblyParser::AssemblyContext::class_() {
  return getRuleContexts<SpadeAssemblyParser::ClassContext>();
}

SpadeAssemblyParser::ClassContext* SpadeAssemblyParser::AssemblyContext::class_(size_t i) {
  return getRuleContext<SpadeAssemblyParser::ClassContext>(i);
}


size_t SpadeAssemblyParser::AssemblyContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleAssembly;
}

void SpadeAssemblyParser::AssemblyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssembly(this);
}

void SpadeAssemblyParser::AssemblyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssembly(this);
}


std::any SpadeAssemblyParser::AssemblyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitAssembly(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::AssemblyContext* SpadeAssemblyParser::assembly() {
  AssemblyContext *_localctx = _tracker.createInstance<AssemblyContext>(_ctx, getState());
  enterRule(_localctx, 0, SpadeAssemblyParser::RuleAssembly);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    metadata();
    setState(42);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__8) {
      setState(41);
      globals();
    }
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeAssemblyParser::T__12

    || _la == SpadeAssemblyParser::T__13) {
      setState(44);
      method();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(53);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeAssemblyParser::T__26) {
      setState(50);
      class_();
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MetadataContext ------------------------------------------------------------------

SpadeAssemblyParser::MetadataContext::MetadataContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SpadeAssemblyParser::MetadataContext::NUMBER() {
  return getTokens(SpadeAssemblyParser::NUMBER);
}

tree::TerminalNode* SpadeAssemblyParser::MetadataContext::NUMBER(size_t i) {
  return getToken(SpadeAssemblyParser::NUMBER, i);
}

SpadeAssemblyParser::ArrayContext* SpadeAssemblyParser::MetadataContext::array() {
  return getRuleContext<SpadeAssemblyParser::ArrayContext>(0);
}


size_t SpadeAssemblyParser::MetadataContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleMetadata;
}

void SpadeAssemblyParser::MetadataContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMetadata(this);
}

void SpadeAssemblyParser::MetadataContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMetadata(this);
}


std::any SpadeAssemblyParser::MetadataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitMetadata(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::MetadataContext* SpadeAssemblyParser::metadata() {
  MetadataContext *_localctx = _tracker.createInstance<MetadataContext>(_ctx, getState());
  enterRule(_localctx, 2, SpadeAssemblyParser::RuleMetadata);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(SpadeAssemblyParser::T__0);
    setState(57);
    match(SpadeAssemblyParser::T__1);
    setState(58);
    match(SpadeAssemblyParser::NUMBER);
    setState(59);
    match(SpadeAssemblyParser::T__2);
    setState(60);
    match(SpadeAssemblyParser::T__1);
    setState(61);
    match(SpadeAssemblyParser::NUMBER);
    setState(62);
    match(SpadeAssemblyParser::T__3);
    setState(63);
    match(SpadeAssemblyParser::T__1);
    setState(64);
    match(SpadeAssemblyParser::NUMBER);
    setState(65);
    match(SpadeAssemblyParser::T__4);
    setState(66);
    match(SpadeAssemblyParser::T__1);
    setState(67);
    _la = _input->LA(1);
    if (!(_la == SpadeAssemblyParser::T__5

    || _la == SpadeAssemblyParser::T__6)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(68);
    match(SpadeAssemblyParser::T__7);
    setState(69);
    match(SpadeAssemblyParser::T__1);
    setState(70);
    array();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalsContext ------------------------------------------------------------------

SpadeAssemblyParser::GlobalsContext::GlobalsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SpadeAssemblyParser::GlobalContext *> SpadeAssemblyParser::GlobalsContext::global() {
  return getRuleContexts<SpadeAssemblyParser::GlobalContext>();
}

SpadeAssemblyParser::GlobalContext* SpadeAssemblyParser::GlobalsContext::global(size_t i) {
  return getRuleContext<SpadeAssemblyParser::GlobalContext>(i);
}


size_t SpadeAssemblyParser::GlobalsContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleGlobals;
}

void SpadeAssemblyParser::GlobalsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobals(this);
}

void SpadeAssemblyParser::GlobalsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobals(this);
}


std::any SpadeAssemblyParser::GlobalsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitGlobals(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::GlobalsContext* SpadeAssemblyParser::globals() {
  GlobalsContext *_localctx = _tracker.createInstance<GlobalsContext>(_ctx, getState());
  enterRule(_localctx, 4, SpadeAssemblyParser::RuleGlobals);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(SpadeAssemblyParser::T__8);
    setState(73);
    match(SpadeAssemblyParser::T__1);
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeAssemblyParser::T__10

    || _la == SpadeAssemblyParser::T__11) {
      setState(74);
      global();
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(80);
    match(SpadeAssemblyParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalContext ------------------------------------------------------------------

SpadeAssemblyParser::GlobalContext::GlobalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeAssemblyParser::GlobalContext::ID() {
  return getToken(SpadeAssemblyParser::ID, 0);
}

tree::TerminalNode* SpadeAssemblyParser::GlobalContext::STRING() {
  return getToken(SpadeAssemblyParser::STRING, 0);
}


size_t SpadeAssemblyParser::GlobalContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleGlobal;
}

void SpadeAssemblyParser::GlobalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal(this);
}

void SpadeAssemblyParser::GlobalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal(this);
}


std::any SpadeAssemblyParser::GlobalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitGlobal(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::GlobalContext* SpadeAssemblyParser::global() {
  GlobalContext *_localctx = _tracker.createInstance<GlobalContext>(_ctx, getState());
  enterRule(_localctx, 6, SpadeAssemblyParser::RuleGlobal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _la = _input->LA(1);
    if (!(_la == SpadeAssemblyParser::T__10

    || _la == SpadeAssemblyParser::T__11)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(83);
    match(SpadeAssemblyParser::ID);
    setState(84);
    match(SpadeAssemblyParser::T__1);
    setState(85);
    match(SpadeAssemblyParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodContext ------------------------------------------------------------------

SpadeAssemblyParser::MethodContext::MethodContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeAssemblyParser::MethodContext::STRING() {
  return getToken(SpadeAssemblyParser::STRING, 0);
}

tree::TerminalNode* SpadeAssemblyParser::MethodContext::NUMBER() {
  return getToken(SpadeAssemblyParser::NUMBER, 0);
}

SpadeAssemblyParser::ArgsContext* SpadeAssemblyParser::MethodContext::args() {
  return getRuleContext<SpadeAssemblyParser::ArgsContext>(0);
}

SpadeAssemblyParser::LocsContext* SpadeAssemblyParser::MethodContext::locs() {
  return getRuleContext<SpadeAssemblyParser::LocsContext>(0);
}

SpadeAssemblyParser::CodeContext* SpadeAssemblyParser::MethodContext::code() {
  return getRuleContext<SpadeAssemblyParser::CodeContext>(0);
}

SpadeAssemblyParser::ExceptionTableContext* SpadeAssemblyParser::MethodContext::exceptionTable() {
  return getRuleContext<SpadeAssemblyParser::ExceptionTableContext>(0);
}


size_t SpadeAssemblyParser::MethodContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleMethod;
}

void SpadeAssemblyParser::MethodContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethod(this);
}

void SpadeAssemblyParser::MethodContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethod(this);
}


std::any SpadeAssemblyParser::MethodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitMethod(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::MethodContext* SpadeAssemblyParser::method() {
  MethodContext *_localctx = _tracker.createInstance<MethodContext>(_ctx, getState());
  enterRule(_localctx, 8, SpadeAssemblyParser::RuleMethod);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__12) {
      setState(87);
      match(SpadeAssemblyParser::T__12);
    }
    setState(90);
    match(SpadeAssemblyParser::T__13);
    setState(91);
    match(SpadeAssemblyParser::STRING);
    setState(92);
    match(SpadeAssemblyParser::T__1);
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__15) {
      setState(93);
      args();
    }
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__18) {
      setState(96);
      locs();
    }
    setState(99);
    match(SpadeAssemblyParser::T__14);
    setState(100);
    match(SpadeAssemblyParser::T__1);
    setState(101);
    match(SpadeAssemblyParser::NUMBER);
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__22) {
      setState(102);
      code();
    }
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__23) {
      setState(105);
      exceptionTable();
    }
    setState(108);
    match(SpadeAssemblyParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

SpadeAssemblyParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SpadeAssemblyParser::ArgContext *> SpadeAssemblyParser::ArgsContext::arg() {
  return getRuleContexts<SpadeAssemblyParser::ArgContext>();
}

SpadeAssemblyParser::ArgContext* SpadeAssemblyParser::ArgsContext::arg(size_t i) {
  return getRuleContext<SpadeAssemblyParser::ArgContext>(i);
}


size_t SpadeAssemblyParser::ArgsContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleArgs;
}

void SpadeAssemblyParser::ArgsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs(this);
}

void SpadeAssemblyParser::ArgsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs(this);
}


std::any SpadeAssemblyParser::ArgsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitArgs(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::ArgsContext* SpadeAssemblyParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 10, SpadeAssemblyParser::RuleArgs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(SpadeAssemblyParser::T__15);
    setState(111);
    match(SpadeAssemblyParser::T__1);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeAssemblyParser::T__16

    || _la == SpadeAssemblyParser::T__17) {
      setState(112);
      arg();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    match(SpadeAssemblyParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

SpadeAssemblyParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeAssemblyParser::ArgContext::ID() {
  return getToken(SpadeAssemblyParser::ID, 0);
}

tree::TerminalNode* SpadeAssemblyParser::ArgContext::STRING() {
  return getToken(SpadeAssemblyParser::STRING, 0);
}


size_t SpadeAssemblyParser::ArgContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleArg;
}

void SpadeAssemblyParser::ArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg(this);
}

void SpadeAssemblyParser::ArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg(this);
}


std::any SpadeAssemblyParser::ArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitArg(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::ArgContext* SpadeAssemblyParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 12, SpadeAssemblyParser::RuleArg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    _la = _input->LA(1);
    if (!(_la == SpadeAssemblyParser::T__16

    || _la == SpadeAssemblyParser::T__17)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(121);
    match(SpadeAssemblyParser::ID);
    setState(122);
    match(SpadeAssemblyParser::T__1);
    setState(123);
    match(SpadeAssemblyParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocsContext ------------------------------------------------------------------

SpadeAssemblyParser::LocsContext::LocsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeAssemblyParser::LocsContext::NUMBER() {
  return getToken(SpadeAssemblyParser::NUMBER, 0);
}

std::vector<SpadeAssemblyParser::LocalContext *> SpadeAssemblyParser::LocsContext::local() {
  return getRuleContexts<SpadeAssemblyParser::LocalContext>();
}

SpadeAssemblyParser::LocalContext* SpadeAssemblyParser::LocsContext::local(size_t i) {
  return getRuleContext<SpadeAssemblyParser::LocalContext>(i);
}


size_t SpadeAssemblyParser::LocsContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleLocs;
}

void SpadeAssemblyParser::LocsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocs(this);
}

void SpadeAssemblyParser::LocsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocs(this);
}


std::any SpadeAssemblyParser::LocsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitLocs(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::LocsContext* SpadeAssemblyParser::locs() {
  LocsContext *_localctx = _tracker.createInstance<LocsContext>(_ctx, getState());
  enterRule(_localctx, 14, SpadeAssemblyParser::RuleLocs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(SpadeAssemblyParser::T__18);
    setState(131);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeAssemblyParser::T__19) {
      setState(126);
      match(SpadeAssemblyParser::T__19);
      setState(127);
      match(SpadeAssemblyParser::T__20);
      setState(128);
      match(SpadeAssemblyParser::T__1);
      setState(129);
      match(SpadeAssemblyParser::NUMBER);
      setState(130);
      match(SpadeAssemblyParser::T__21);
    }
    setState(133);
    match(SpadeAssemblyParser::T__1);
    setState(137);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeAssemblyParser::T__10

    || _la == SpadeAssemblyParser::T__11) {
      setState(134);
      local();
      setState(139);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(140);
    match(SpadeAssemblyParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalContext ------------------------------------------------------------------

SpadeAssemblyParser::LocalContext::LocalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeAssemblyParser::LocalContext::ID() {
  return getToken(SpadeAssemblyParser::ID, 0);
}

tree::TerminalNode* SpadeAssemblyParser::LocalContext::STRING() {
  return getToken(SpadeAssemblyParser::STRING, 0);
}


size_t SpadeAssemblyParser::LocalContext::getRuleIndex() const {
  return SpadeAssemblyParser::RuleLocal;
}

void SpadeAssemblyParser::LocalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocal(this);
}

void SpadeAssemblyParser::LocalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SpadeAssemblyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocal(this);
}


std::any SpadeAssemblyParser::LocalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeAssemblyVisitor*>(visitor))
    return parserVisitor->visitLocal(this);
  else
    return visitor->visitChildren(this);
}

SpadeAssemblyParser::LocalContext* SpadeAssemblyParser::local() {
  LocalContext *_localctx = _tracker.createInstance<LocalContext>(_ctx, getState());
  enterRule(_localctx, 16, SpadeAssemblyParser::RuleLocal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    _la = _input->LA(1);
    if (!(_la == SpadeAssemblyParser::T__10
